complete part four of tutorial

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "gatsby": "^1.9.119",
     "gatsby-link": "^1.6.28",
+    "gatsby-plugin-glamor": "^1.6.9",
     "gatsby-plugin-typography": "^1.7.10",
-    "typography-theme-fairy-gates": "^0.15.11"
+    "gatsby-source-filesystem": "^1.5.9",
+    "gatsby-transformer-remark": "^1.7.25",
+    "glamorous": "^4.11.0",
+    "typography-theme-kirkham": "^0.16.3"
   }
 }
